# Graphs

./: .gitignore  Algorithms.c  Algorithms.h  CMakeLists.txt  IndexedHeap.c  README.md  Solutions.h  main.c
Heuristics/: farthestFromActivationHeuristic.c  farthestFromActivationHeuristic.h  fullRandomHeuristic.c
Heuristics/deterministic/: MaximumDegreeHeuristic.h  bridgeHeuristic.h  farthestFromActivationHeuristic.c  hillClimbLocalSearch.c  hillClimbLocalSearch.h
Heuristics/probabilistic/: farthestFromActivation_r.c  farthestFromActivation_r.h
include/: Solutions.h
include/Heuristics/deterministic/: MaximumDegreeHeuristic.h  bridgeHeuristic.h  farthestFromActivationHeuristic.h  fullRandomHeuristic.h
include/Heuristics/probabilistic/: farthestFromActivation_r.h
include/LocalSearch/: hillClimb.h
src/: Algorithms.c  Graph.c  IndexedHeap.h  LinkedList.h  Solutions.h  Tarjan.h  Utils.h  main.c
src/Heuristics/deterministic/: MaximumDegreeHeuristic.c  bridgeHeuristic.c  farthestFromActivationHeuristic.c  fullRandomHeuristic.c  hillClimbLocalSearch.c
src/Heuristics/probabilistic/: farthestFromActivation_r.c
src/LocalSearch/: hillClimb.c
src/Meta-Heuristics/: grasp.c
tools/: CMakeLists.txt
tools/GraphSolverCLI/: CMakeLists.txt  main.c
